--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2>FRONT-END-DEVELOPER</h2>
     <hr class="divider">
     <div class="main-div">
-   <p>I`mn nignly motivated and detail-orlented with a passion for creating visually appealing, easy-to-use websites.</p>
+   <p>I`m nignly motivated and detail-orlented with a passion for creating visually appealing, easy-to-use websites.</p>
     
     </div>
   
